set context in read methods (FS)

--- a/example/Demo_Database_FileSystem.ipynb
+++ b/example/Demo_Database_FileSystem.ipynb
@@ -77,38 +77,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ndi.probe.Probe object at 0x1199c4250>\n",
-      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
-      "<ndi.probe.Probe object at 0x1199c4400>\n",
-      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
-      "<ndi.epoch.Epoch object at 0x10d957070>\n",
-      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
-      "<ndi.epoch.Epoch object at 0x10d8fddf0>\n",
-      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
-      "<ndi.epoch.Epoch object at 0x1199b9700>\n",
-      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
-      "<ndi.channel.Channel object at 0x10d8fdb20>\n",
-      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
-      "<ndi.channel.Channel object at 0x10d8fde20>\n",
-      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
-      "<ndi.channel.Channel object at 0x10d8fda60>\n",
-      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
-      "<ndi.probe.Probe object at 0x1199c44c0>\n",
-      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
-      "<ndi.probe.Probe object at 0x1199c4520>\n",
-      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
-      "<ndi.epoch.Epoch object at 0x1199c43a0>\n",
-      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
-      "<ndi.epoch.Epoch object at 0x1199c41f0>\n",
-      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
-      "<ndi.epoch.Epoch object at 0x1199c45b0>\n",
-      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
-      "<ndi.channel.Channel object at 0x1199c42b0>\n",
-      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
-      "<ndi.channel.Channel object at 0x1199c4340>\n",
-      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n",
-      "<ndi.channel.Channel object at 0x1199c4670>\n",
-      "<ndi.database.file_system.FileSystem object at 0x1199b9820>\n"
+      "<ndi.experiment.Experiment object at 0x10f3788b0>\n",
+      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
+      "<ndi.daq_system.DaqSystem object at 0x10af5dac0>\n",
+      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
+      "<ndi.probe.Probe object at 0x10f3780d0>\n",
+      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
+      "<ndi.probe.Probe object at 0x10f378340>\n",
+      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
+      "<ndi.epoch.Epoch object at 0x10f3783a0>\n",
+      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
+      "<ndi.epoch.Epoch object at 0x10f378430>\n",
+      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
+      "<ndi.epoch.Epoch object at 0x10f378460>\n",
+      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
+      "<ndi.channel.Channel object at 0x10f36f9d0>\n",
+      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
+      "<ndi.channel.Channel object at 0x10af27700>\n",
+      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
+      "<ndi.channel.Channel object at 0x10af5dd90>\n",
+      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
+      "<ndi.daq_system.DaqSystem object at 0x10f36fa30>\n",
+      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
+      "<ndi.probe.Probe object at 0x10f378160>\n",
+      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
+      "<ndi.probe.Probe object at 0x10f3784c0>\n",
+      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
+      "<ndi.epoch.Epoch object at 0x10f3784f0>\n",
+      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
+      "<ndi.epoch.Epoch object at 0x10f378250>\n",
+      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
+      "<ndi.epoch.Epoch object at 0x10f378580>\n",
+      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
+      "<ndi.channel.Channel object at 0x10f3785e0>\n",
+      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
+      "<ndi.channel.Channel object at 0x10f378670>\n",
+      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
+      "<ndi.channel.Channel object at 0x10f3786a0>\n",
+      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n"
      ]
     }
    ],
@@ -122,15 +128,14 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Experiment' object has no attribute 'ctx'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-b598744a28c9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mctx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Experiment' object has no attribute 'ctx'"
-     ]
+     "data": {
+      "text/plain": [
+       "<ndi.database.file_system.FileSystem at 0x10f36f700>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -139,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,34 +153,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "e2 == e"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "e2 == db.find(Experiment,Q('name') == 'myExperiment3')[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "db.find(Experiment, Q('name') == 'myExperiment2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,34 +222,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<ndi.daq_system.DaqSystem object at 0x10f3ac340>, <ndi.daq_system.DaqSystem object at 0x10f3aceb0>]\n"
+     ]
+    }
+   ],
    "source": [
     "print(ds_results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "e.daq_systems[0] == ds_results[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<ndi.experiment.Experiment at 0x10f3ac7f0>,\n",
+       " <ndi.experiment.Experiment at 0x10f3acf40>,\n",
+       " <ndi.experiment.Experiment at 0x10f3af520>]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "db.find(Experiment)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,9 +290,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File not found\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    db.find_by_id(Experiment, e.id)\n",
@@ -232,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,18 +319,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "db.find(Experiment)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File '../test_exp/.ndi/daq_systems/6c39ed70565b415eae705f17dc538fad.dat' already exists\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    db.add(ds)\n",
@@ -262,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,16 +368,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "myDaq1\n"
+     ]
+    }
+   ],
    "source": [
     "print(ds.name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,18 +403,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "daq2\n"
+     ]
+    }
+   ],
    "source": [
     "print(ds2.name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'a' is not an instance of an 'NDI_Object' child class.\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    db.add('a')\n",
@@ -319,9 +440,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'ndi.experiment.Experiment'>\n"
+     ]
+    }
+   ],
    "source": [
     "db.drop_collection(Experiment)\n",
     "try:\n",
