add ctx in relevant sql database methods

--- a/example/Demo_Database_FileSystem.ipynb
+++ b/example/Demo_Database_FileSystem.ipynb
@@ -72,79 +72,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<ndi.experiment.Experiment object at 0x10f3788b0>\n",
-      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
-      "<ndi.daq_system.DaqSystem object at 0x10af5dac0>\n",
-      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
-      "<ndi.probe.Probe object at 0x10f3780d0>\n",
-      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
-      "<ndi.probe.Probe object at 0x10f378340>\n",
-      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
-      "<ndi.epoch.Epoch object at 0x10f3783a0>\n",
-      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
-      "<ndi.epoch.Epoch object at 0x10f378430>\n",
-      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
-      "<ndi.epoch.Epoch object at 0x10f378460>\n",
-      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
-      "<ndi.channel.Channel object at 0x10f36f9d0>\n",
-      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
-      "<ndi.channel.Channel object at 0x10af27700>\n",
-      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
-      "<ndi.channel.Channel object at 0x10af5dd90>\n",
-      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
-      "<ndi.daq_system.DaqSystem object at 0x10f36fa30>\n",
-      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
-      "<ndi.probe.Probe object at 0x10f378160>\n",
-      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
-      "<ndi.probe.Probe object at 0x10f3784c0>\n",
-      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
-      "<ndi.epoch.Epoch object at 0x10f3784f0>\n",
-      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
-      "<ndi.epoch.Epoch object at 0x10f378250>\n",
-      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
-      "<ndi.epoch.Epoch object at 0x10f378580>\n",
-      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
-      "<ndi.channel.Channel object at 0x10f3785e0>\n",
-      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
-      "<ndi.channel.Channel object at 0x10f378670>\n",
-      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n",
-      "<ndi.channel.Channel object at 0x10f3786a0>\n",
-      "<ndi.database.file_system.FileSystem object at 0x10f36f700>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.add_experiment(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<ndi.database.file_system.FileSystem at 0x10f36f700>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "e.ctx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,67 +97,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "e2.ctx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "e2 == e"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "e2 == db.find(Experiment,Q('name') == 'myExperiment3')[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.find(Experiment, Q('name') == 'myExperiment2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,66 +142,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<ndi.daq_system.DaqSystem object at 0x10f3ac340>, <ndi.daq_system.DaqSystem object at 0x10f3aceb0>]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(ds_results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "e.daq_systems[0] == ds_results[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<ndi.experiment.Experiment at 0x10f3ac7f0>,\n",
-       " <ndi.experiment.Experiment at 0x10f3acf40>,\n",
-       " <ndi.experiment.Experiment at 0x10f3af520>]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.find(Experiment)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,17 +178,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File not found\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    db.find_by_id(Experiment, e.id)\n",
@@ -310,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,37 +199,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.find(Experiment)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File '../test_exp/.ndi/daq_systems/6c39ed70565b415eae705f17dc538fad.dat' already exists\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    db.add(ds)\n",
@@ -359,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,24 +229,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "myDaq1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(ds.name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,34 +256,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "daq2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(ds2.name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'a' is not an instance of an 'NDI_Object' child class.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    db.add('a')\n",
@@ -440,17 +277,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'ndi.experiment.Experiment'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.drop_collection(Experiment)\n",
     "try:\n",
