--- a/example/Demo_Database_SQL.ipynb
+++ b/example/Demo_Database_SQL.ipynb
@@ -99,8 +99,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "e.ctx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for i, experiment in enumerate(db.find(Experiment)):\n",
     "    print(i, experiment.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(db.find_by_id(Experiment, e.id))"
    ]
   },
   {
