--- a/example/Demo_Database_SQL_Relationships.ipynb
+++ b/example/Demo_Database_SQL_Relationships.ipynb
@@ -80,7 +80,8 @@
    "outputs": [],
    "source": [
     "e = Experiment(name='myExperiment3', \n",
-    "               daq_systems=[ds, ds2])"
+    "               daq_systems=[ds, ds2])\n",
+    "e.set_ctx(db)"
    ]
   },
   {
@@ -219,7 +220,8 @@
     "print('')\n",
     "\n",
     "for r in relations:\n",
-    "    print(r.__dict__)\n"
+    "    print(r.__dict__)\n",
+    "    print('')\n"
    ]
   },
   {
