rename and add headings to Demo_Database_SQL_Relationships

--- a/example/Demo_Database_SQL_Relationships.ipynb
+++ b/example/Demo_Database_SQL_Relationships.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Connect to database\n",
+    "# CONNECT TO DATABASE\n",
     "db = database.SQL('postgres://postgres:1Password!@localhost:5432/practice')"
    ]
   },
@@ -89,6 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ADD EXPERIMENT (with dependants)\n",
     "db.add_experiment(e)"
    ]
   },
@@ -108,6 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# UTILITY TO DISPLAY DATABASE CONTENTS\n",
     "def show_all_in_tables():\n",
     "    tables = [('Experiments', Experiment), \n",
     "             ('DAQ systems', DaqSystem), \n",
@@ -129,6 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# VIEW ALL CONTENTS ADDED WITH EXPERIMENT\n",
     "show_all_in_tables()"
    ]
   },
@@ -138,14 +141,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# SHOWS PROBES IN DATABASE WITH FOREIGN KEYS\n",
+    "\n",
     "field = db._collections[Probe].fields\n",
     "filters = field['reference'] > 1\n",
     "\n",
     "for obj in db._collections[Probe].find(sqla_query=filters, result_format=Datatype.SQL_ALCHEMY):\n",
     "    print(obj)\n",
     "    print('-----')\n",
-    "    new_e = Probe.from_flatbuffer(obj['flatbuffer'])\n",
-    "    print(new_e.__dict__)"
+    "    new_p = Probe.from_flatbuffer(obj['flatbuffer'])\n",
+    "    print(new_p.__dict__)"
    ]
   },
   {
@@ -164,6 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# SHOW CASCADE DELETE EFFECT\n",
     "show_all_in_tables()"
    ]
   },
@@ -173,6 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# SHOW UNIDIRECTIONAL CASCADE EFFECT\n",
     "db.add_experiment(e)\n",
     "print('\\n**DELETE PROBES**\\n')\n",
     "db.delete(db.find(Probe))\n",
@@ -185,6 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# RESET EXPERIMENT\n",
     "db.delete(db.find(Experiment))\n",
     "db.add_experiment(e)"
    ]
@@ -194,11 +202,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# e2 = db.find(Experiment, as_sql_data=True)[0]\n",
-    "# print(e2)\n",
-    "# e2.daq_systems"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -206,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_col = db._collections[DaqSystem]\n",
+    "# SHOW RELATIONSHIP OBJECTS FOR EXPERIMENT COLLECTION\n",
     "e_col = db._collections[Experiment]\n",
     "p = lambda x: print(x, '\\n')\n",
     "    \n",
@@ -216,28 +220,6 @@
     "\n",
     "for r in relations:\n",
     "    print(r.__dict__)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with db._sqla_open_session() as session:\n",
-    "    results = session.query(e_col.table).all()\n",
-    "    e = results[0]\n",
-    "    print(e.__dict__)\n",
-    "\n",
-    "    \n",
-    "#     p(type(e['daq_systems']))\n",
-    "    ds1, ds2 = getattr(e, 'daq_systems')\n",
-    "    p(ds1)\n",
-    "    p(ds2)\n",
-    "    p(type(e.daq_systems))\n",
-    "    p(ds2.probes)\n",
-    "    p(type(ds2.probes))\n",
-    "    "
    ]
   },
   {
